[package]
name = "mle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
ark-std = "0.3"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
bitvec = "1.0"

[dev-dependencies]
ark-bls12-381 = "0.3"
utils = { path = "../utils" }
